# amd-experiments

./: CMakeLists.txt  arithmetic.hip  atomic_global.hip  atomic_local.hip  benchmark.hpp  cache_coalescing.hip  common.hpp  gpu.hpp  memory.hip  mma.hip  shuffle.hip
